

New features
------------
Replace the calendar system with a simpler date system
Important internal rework to get rid of Observable/Observer and use homemade Publisher/Subscriber instead
Important internal rework to add a synchronization framework to manage concurrent continuous actions (currently only used for date)
File menu actions now stop the application before executing its actions
Addition of a "Very fast" speed radio button (and rename others to "Normal" and "Fast") 


Bug fixes
---------
None yet



--------------------------------------------------
---                    v0.4                    ---
--------------------------------------------------

This is an intermediary release. The interesting part of the application has not changed a lot.


New features
------------
Addition of this change-log
Important rework of inner code for better design and performance
Ability to show/hide FPS (new menu item), stored in save file
Ability to show/hide the axis (new menu item), stored in save file
The camera position and angle of view is stored in save file
Ability to reset the camera to its original point of view (new menu item)
Ability to reset the camera view angle to nominal one (along Z axis, parallel to the ground, and at 2 meters high)
Improvement of the "File" menu to prevent potential IllegalStateException
Improvement of the "File" menu to allow "Save" item to behave as "Save As..." item if no current save file is known
Addition of a help menu to display navigation keys
Addition of a speed switch radio button
Addition of a MAX_ENERGY limit for leaf, branchPart, branch and tree
#### Add a calendar system (not used yet)


Bug fixes
---------
Fix some unit tests that were generating errors randomly


--------------------------------------------------
---                    v0.3                    ---
--------------------------------------------------
This is the very first version of barsuift-simlife. Its acts as a proof of concept version.

New features